@@ -3,6 +3,9 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-12-07 (SVN):
+    * bspfile.c: fixed an old stupid error in the version error message.
+
 2012-11-23 (SVN):
     * mathlib.h (VectorClear): remove extraneous semicolon from the end.
 
